# owo

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_initial_schema.sql
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs
backend/src/integrations/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/tests/: mod.rs
docs/: database.md
mobile/: .gitignore  build.gradle.kts  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/core/database/: build.gradle.kts
mobile/core/domain/: build.gradle.kts
mobile/core/navigation/api/: build.gradle.kts
mobile/core/navigation/impl/: build.gradle.kts
mobile/core/ui/: build.gradle.kts
mobile/feature/accounts/api/: build.gradle.kts
mobile/feature/accounts/impl/: build.gradle.kts
mobile/feature/cards/api/: build.gradle.kts
mobile/feature/cards/impl/: build.gradle.kts
mobile/feature/dashboard/api/: build.gradle.kts
mobile/feature/dashboard/impl/: build.gradle.kts
mobile/feature/onboarding/api/: build.gradle.kts
mobile/feature/onboarding/impl/: build.gradle.kts
mobile/feature/transactions/api/: build.gradle.kts
mobile/feature/transactions/impl/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
mobile/shared/: build.gradle.kts
scripts/: init.sql  schema.sql
(+80 files in other folders)
